--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 Django==1.4.2
-WebOb==1.1.1
+croniter==0.3.3
 dj-database-url==0.2.1
 psycopg2==2.4.5
+python-dateutil==2.1
+six==1.2.0
 wsgiref==0.1.2
+zope.interface==4.0.1
