--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-Django==1.4.2
+Django==1.5.1
 croniter==0.3.3
-dj-database-url==0.2.1
-psycopg2==2.4.5
+dj-database-url==0.2.2
+django-crispy-forms==1.3.2
+psycopg2==2.5.1
 python-dateutil==2.1
-six==1.2.0
+six==1.3.0
 wsgiref==0.1.2
-zope.interface==4.0.1
+zope.interface==4.0.5
