--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==1.5.1
 croniter==0.3.3
 dj-database-url==0.2.2
 django-crispy-forms==1.3.2
+gunicorn==17.5
 psycopg2==2.5.1
 python-dateutil==2.1
 six==1.3.0
